--- a/Repuestos Lirola/index.html
+++ b/Repuestos Lirola/index.html
@@ -14,7 +14,7 @@
     crossorigin="anonymous"></script>
   <!--import de normalize-->
   <link rel="stylesheet" href="css/normalize.css">
-  <!--Import hoja de estilos-->    
+  <!--Import hoja de estilos-->
   <link rel="stylesheet" href="css/main.css">
   <!--Favicon-->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -37,14 +37,14 @@
             <!-- icono -->
 
             <a class="navbar-brand" href="index.html">
-              <img src="img/rl.png">
+              <img src="img/rl.png" alt="logo">
               <span class="text-white margen-derecho">Repuestos Lirola </span>
             </a>
 
             <!-- boton del menu -->
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -73,8 +73,8 @@
 
     <div class="row row-portada">
       <div class="col-12 col-xs-12 col-md-12 col-lg-12 col-xl-12  col-xxl-12">
-        <img class="imgPortada" src="img/imgPortada.png" id="row-portada-center">
-      </div>      
+        <img class="imgPortada" src="img/imgPortada.png" id="row-portada-center" alt="imagen-Portada">
+      </div>
     </div>
 
     <!-- 1 Row Cream-->
@@ -86,7 +86,7 @@
           900.000 referencias en artículos relacionados con la Automoción.</p>
       </div>
       <div class="col col-xxl-4">
-        <img src="img/imgcol1.png" class="row-img">
+        <img src="img/imgcol1.png" class="row-img" alt="imagenColumna1">
       </div>
     </div>
 
@@ -99,7 +99,7 @@
           garantiza contar con calidad, disponibilidad y variedad.</p>
       </div>
       <div class="col col-xxl-4 ">
-        <img src="img/imgcol2.png" class="row-img">
+        <img src="img/imgcol2.png" class="row-img" alt="imagenColumna2">
       </div>
     </div>
 
@@ -111,7 +111,7 @@
         <p class="row-description">Garantizar que todos nuestros clientes estén 100% satisfechos.</p>
       </div>
       <div class="col col-xxl-4">
-        <img src="img/imgcol3.png" class="row-img">
+        <img src="img/imgcol3.png" class="row-img" alt="imagenColumna3">
       </div>
     </div>
 
@@ -148,7 +148,7 @@
         <p>Domingo:</p>
         <p class="cerrado">Cerrado</p>
       </div>
-      <div id="map-container-google-1" class="z-depth-1-half map-container col-12 col-xs-12 col-lg-6 col-xl-6">
+      <div id="map-container-google-2" class="z-depth-1-half map-container col-12 col-xs-12 col-lg-6 col-xl-6">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.3371449596116!2d-2.6083393236205485!3d36.78646616847273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7070307f1e5cad%3A0x7d3a4fdd8ad876!2sPol.%20Ind.%20La%20Algaida!5e0!3m2!1ses!2ses!4v1698243607313!5m2!1ses!2ses"
           style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -163,9 +163,9 @@
           <!-- Section: Social media -->
           <section class="d-flex justify-content-center justify-content-lg-center p-4 border-bottom">
             <div class="me-5 d-none d-lg-block">
-              <span>
-                <h4>Encuéntranos en nuestras redes sociales:</h4>
-              </span>
+
+              <h4>Encuéntranos en nuestras redes sociales:</h4>
+
             </div>
             <div>
               <a href="" class="me-4 iconos">
