--- a/Repuestos Lirola/productos.html
+++ b/Repuestos Lirola/productos.html
@@ -32,14 +32,14 @@
                         <!-- icono -->
 
                         <a class="navbar-brand" href="index.html">
-                            <img src="img/rl.png">
+                            <img src="img/rl.png" alt="logo">
                             <span class="text-white margen-derecho">Repuestos Lirola </span>
                         </a>
 
                         <!-- boton del menu -->
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
@@ -82,25 +82,25 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="img/Dirección/bombas.png " class="d-block img-carousel p-5">
+                            <img src="img/Dirección/bombas.png " class="d-block img-carousel p-5" alt="bombas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Bombas</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Dirección/direcciones.png" class="d-block img-carousel p-5">
+                            <img src="img/Dirección/direcciones.png" class="d-block img-carousel p-5" alt="direcciones">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Direcciones</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Dirección/fuelle.png" class="d-block img-carousel p-5">
+                            <img src="img/Dirección/fuelle.png" class="d-block img-carousel p-5" alt="fuelle">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Fuelles</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Dirección/rotula.png" class="d-block img-carousel p-5">
+                            <img src="img/Dirección/rotula.png" class="d-block img-carousel p-5" alt="rotulas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Rótulas</h5>
                             </div>
@@ -141,37 +141,39 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="img/Iluminación/antiniebla.png " class="d-block img-carousel p-5">
+                            <img src="img/Iluminación/antiniebla.png " class="d-block img-carousel p-5"
+                                alt="antiniebla">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Faros Antiniebla</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Iluminación/balastros.png" class="d-block img-carousel p-5">
+                            <img src="img/Iluminación/balastros.png" class="d-block img-carousel p-5" alt="balastros">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Balastros Xenon</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Iluminación/farosprincipales.png" class="d-block img-carousel p-5">
+                            <img src="img/Iluminación/farosprincipales.png" class="d-block img-carousel p-5"
+                                alt="faros">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Faros Principales</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Iluminación/faroxaux.png" class="d-block img-carousel p-5">
+                            <img src="img/Iluminación/faroxaux.png" class="d-block img-carousel p-5" alt="Faros-aux">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Faros Auxiliares</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Iluminación/lamphaloge.png" class="d-block img-carousel p-5">
+                            <img src="img/Iluminación/lamphaloge.png" class="d-block img-carousel p-5" alt="lamparas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Lámparas Halógenas</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Iluminación/led.png" class="d-block img-carousel p-5">
+                            <img src="img/Iluminación/led.png" class="d-block img-carousel p-5" alt="led">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Lámparas LED</h5>
                             </div>
@@ -214,43 +216,45 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="img/Carrocería/aletas.png " class="d-block img-carousel p-5">
+                            <img src="img/Carrocería/aletas.png " class="d-block img-carousel p-5" alt="aletas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Aletas</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Carrocería/capot.png" class="d-block img-carousel p-5">
+                            <img src="img/Carrocería/capot.png" class="d-block img-carousel p-5" alt="capot">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Capot</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Carrocería/elevalunas.png" class="d-block img-carousel p-5">
+                            <img src="img/Carrocería/elevalunas.png" class="d-block img-carousel p-5" alt="elevalunas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Elevalunas</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Carrocería/frontales.png" class="d-block img-carousel p-5">
+                            <img src="img/Carrocería/frontales.png" class="d-block img-carousel p-5" alt="frontales">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Frontales</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Carrocería/paragolpes.png" class="d-block img-carousel p-5">
+                            <img src="img/Carrocería/paragolpes.png" class="d-block img-carousel p-5" alt="paragolpes">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Paragolpes</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Carrocería/pilotodelantero.png" class="d-block img-carousel p-5">
+                            <img src="img/Carrocería/pilotodelantero.png" class="d-block img-carousel p-5"
+                                alt="pilotos-delanteros">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Pilotos Delanteros</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Carrocería/pilotolateral.png" class="d-block img-carousel p-5">
+                            <img src="img/Carrocería/pilotolateral.png" class="d-block img-carousel p-5"
+                                alt="pilotos-laterales">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Pilotos Laterales</h5>
                             </div>
@@ -292,37 +296,41 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="img/Sistema_Frenos/bombas.png " class="d-block img-carousel p-5">
+                            <img src="img/Sistema_Frenos/bombas.png " class="d-block img-carousel p-5"
+                                alt="bombas-frenos">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Bombas</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Sistema_Frenos/cilindrorueda.png" class="d-block img-carousel p-5">
+                            <img src="img/Sistema_Frenos/cilindrorueda.png" class="d-block img-carousel p-5"
+                                alt="cilindros-rueda">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Cilindros de rueda</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Sistema_Frenos/depresores.png" class="d-block img-carousel p-5">
+                            <img src="img/Sistema_Frenos/depresores.png" class="d-block img-carousel p-5"
+                                alt="depresores">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Depresores</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Sistema_Frenos/discos.png" class="d-block img-carousel p-5">
+                            <img src="img/Sistema_Frenos/discos.png" class="d-block img-carousel p-5" alt="discos">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Discos</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Sistema_Frenos/latiguillos.png" class="d-block img-carousel p-5">
+                            <img src="img/Sistema_Frenos/latiguillos.png" class="d-block img-carousel p-5"
+                                alt="latiguillos">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Latiguillos</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Sistema_Frenos/zapatas.png" class="d-block img-carousel p-5">
+                            <img src="img/Sistema_Frenos/zapatas.png" class="d-block img-carousel p-5" alt="zapatas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Kit de zapatas</h5>
                             </div>
@@ -361,25 +369,25 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="img/Transmisión/cruzetas.png " class="d-block img-carousel p-5">
+                            <img src="img/Transmisión/cruzetas.png " class="d-block img-carousel p-5" alt="cruzetas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Cruzetas</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Transmisión/flectores.png" class="d-block img-carousel p-5">
+                            <img src="img/Transmisión/flectores.png" class="d-block img-carousel p-5" alt="flectores">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Flectores</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Transmisión/fuelles.png" class="d-block img-carousel p-5">
+                            <img src="img/Transmisión/fuelles.png" class="d-block img-carousel p-5" alt="fuelles">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Fuelles</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Transmisión/palieres.png" class="d-block img-carousel p-5">
+                            <img src="img/Transmisión/palieres.png" class="d-block img-carousel p-5" alt="palieres">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Palieres</h5>
                             </div>
@@ -428,53 +436,53 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="img/Motor/bombaceite.png " class="d-block img-carousel p-5">
+                            <img src="img/Motor/bombaceite.png " class="d-block img-carousel p-5" alt="bombas-aceite">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Bombas de aceite</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Motor/carter.png" class="d-block img-carousel p-5">
+                            <img src="img/Motor/carter.png" class="d-block img-carousel p-5" alt="carter">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Cárter</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Motor/culatas.png" class="d-block img-carousel p-5">
+                            <img src="img/Motor/culatas.png" class="d-block img-carousel p-5" alt="culatas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Culatas</h5>
                             </div>
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Motor/inyectores.png" class="d-block img-carousel p-5">
+                            <img src="img/Motor/inyectores.png" class="d-block img-carousel p-5" alt="inyectores">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Inyectores</h5>
                             </div>
 
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Motor/juntas.png" class="d-block img-carousel p-5">
+                            <img src="img/Motor/juntas.png" class="d-block img-carousel p-5" alt="juegos-culata">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Juegos de culata</h5>
                             </div>
 
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Motor/levas.png" class="d-block img-carousel p-5">
+                            <img src="img/Motor/levas.png" class="d-block img-carousel p-5" alt="levas">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Árboles de levas</h5>
                             </div>
 
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Motor/retenes.png" class="d-block img-carousel p-5">
+                            <img src="img/Motor/retenes.png" class="d-block img-carousel p-5" alt="retenes">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Retenes</h5>
                             </div>
 
                         </div>
                         <div class="carousel-item " data-bs-interval="10000">
-                            <img src="img/Motor/soportes.png" class="d-block img-carousel p-5">
+                            <img src="img/Motor/soportes.png" class="d-block img-carousel p-5" alt="soportes">
                             <div class="carousel-caption d-xs-block d-md-block">
                                 <h5>Soportes</h5>
                             </div>
@@ -506,9 +514,9 @@
                         <!-- Section: Social media -->
                         <section class="d-flex justify-content-center justify-content-lg-center p-4 border-bottom">
                             <div class="me-5 d-none d-lg-block">
-                                <span>
-                                    <h4>Encuéntranos en nuestras redes sociales:</h4>
-                                </span>
+
+                                <h4>Encuéntranos en nuestras redes sociales:</h4>
+
                             </div>
                             <div>
                                 <a href="" class="me-4 iconos">
@@ -593,8 +601,8 @@
 
 
 
-
         </div>
+    </div>
 </body>
 
 </html>
