--- a/Repuestos Lirola/quienesomos.html
+++ b/Repuestos Lirola/quienesomos.html
@@ -32,14 +32,14 @@
                         <!-- icono -->
 
                         <a class="navbar-brand" href="index.html">
-                            <img src="img/rl.png">
+                            <img src="img/rl.png" alt="logo">
                             <span class="text-white margen-derecho">Repuestos Lirola </span>
                         </a>
 
                         <!-- boton del menu -->
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
@@ -70,7 +70,7 @@
                 <h1 class="titulo-quiensomos">Quiénes Somos</h1>
             </div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-12 col-xl-6 col-xxl-5 p-5">
-                <img src="img/quiensomos.png" id="img-quiensomos">
+                <img src="img/quiensomos.png" id="img-quiensomos" alt="quiénes-somos">
             </div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-12 col-xl-6 col-xxl-5 p-5">
                 <h4>Acerca de Nosotros</h4>
@@ -90,26 +90,26 @@
                 <h1 class="titulo-quiensomos">Miembros del equipo</h1>
             </div>
             <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
-                <img src="img/miembros/juan.png" class="img-equipo">
+                <img src="img/miembros/juan.png" class="img-equipo" alt="juan">
             </div>
 
             <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
-                <img src="img/miembros/pepe.png" class="img-equipo">
+                <img src="img/miembros/pepe.png" class="img-equipo" alt="pepe">
             </div>
             <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
-                <img src="img/miembros/pimo.png" class="img-equipo">
+                <img src="img/miembros/pimo.png" class="img-equipo" alt="pimo">
             </div>
             <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
-                <img src="img/miembros/miguel.png" class="img-equipo">
+                <img src="img/miembros/miguel.png" class="img-equipo" alt="miguel">
             </div>
             <div class="col-12 col-xs-12 col-md-6 col-lg-6 col-xl-4 col-xxl-4 p-5">
-                <img src="img/miembros/dani.png" class="img-equipo">
+                <img src="img/miembros/dani.png" class="img-equipo" alt="dani">
             </div>
         </div>
 
     </div>
 
-    </div>
+
 
 
 
@@ -121,9 +121,9 @@
                 <!-- Section: Social media -->
                 <section class="d-flex justify-content-center justify-content-lg-center p-4 border-bottom">
                     <div class="me-5 d-none d-lg-block">
-                        <span>
-                            <h4>Encuéntranos en nuestras redes sociales:</h4>
-                        </span>
+
+                        <h4>Encuéntranos en nuestras redes sociales:</h4>
+
                     </div>
                     <div>
                         <a href="" class="me-4 iconos">
@@ -197,7 +197,7 @@
             <!-- Footer -->
         </div>
     </div>
-    </div>
+
 </body>
 
 </html>
